update exception handler